--- a/pg3/index.html
+++ b/pg3/index.html
@@ -5,15 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c28c14aa-ef6d-4c5b-ba70-c39fc2d5283c.jpg</title>
     <link rel="stylesheet" href="style.css" />
+    <header><marquee scrollamount="10" behavior="alternate" direction="right">.,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- 
+        .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?-
+         .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- 
+        .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?-</marquee></header>
     <a id="back" href="http://127.0.0.1:5500/pg2/index.html"><img src=".png"/a>
 
           
-        <a id="next" href="http://127.0.0.1:5500/pg4/index.html"><img src="foldernext.png"/a>
+        <a id="next" href="http://127.0.0.1:5500/pg4/index.html"><img src="foldernext.png"/a></a>
 </head>
+<div class="body-text">
 <body>
-    <p>One other little punctuation mark one can have feelings about and that is the apostrophe for possession. Well feel as you like about that, I can see and I do see that for many that for some the possessive case apostrophe has a gentle tender insinuation that makes it very difficult to definitely decide to do without it. One does do without it, I do, I mostly always do, but I cannot deny that from time to time I feel myself having regrets and from time to time I put it in to make the possessive case. I absolutely do not like it and leaving it out I feel no regret, there it is unnecessary and not ornamental but inside a word and its s well perhaps, perhaps it does appeal by its weakness to your weakness. At least at any rate from time to time I do find myself letting it alone if it has come in and sometimes it has come in. I cannot positively deny but that I do from time to time let it come in. </p>
+    <p>One other little punctuation mark one can have feelings about and that is the apostrophe for <span id="clickable-word" class="clickable"> possession.</span> Well feel as you like about that, I can see and I do see that for many that for some the possessive case apostrophe has a gentle tender insinuation that makes it very difficult to definitely decide to do without it. One does do without it, I do, I mostly always do, but I cannot deny that from time to time I feel myself having regrets and from time to time I put it in to make the possessive case. I absolutely do not like it and leaving it out I feel no regret, there it is unnecessary and not ornamental but inside a word and its s well perhaps, perhaps it does appeal by its weakness to your weakness. At least at any rate from time to time I do find myself letting it alone if it has come in and sometimes it has come in. I cannot positively deny but that I do from time to time let it come in.</p>
 
-        
+</div>  
     </div>
+    <body>
+        <div class="container">
+          <div id="hidden-image-container">
+            <img src="apos.png" alt="Hidden Image" id="hidden-image">
+
+        <script src="script.js"></script>
+          </div>
+        </div>
+
+
 </body>
 </html>
+
