--- a/pg3/index.html
+++ b/pg3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c28c14aa-ef6d-4c5b-ba70-c39fc2d5283c.jpg</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <header><marquee scrollamount="10" behavior="alternate" direction="right">.,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- 
         .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?-
          .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- .,;:!?- 
@@ -14,11 +15,39 @@
           
         <a id="next" href="http://127.0.0.1:5500/pg4/index.html"><img src="foldernext.png"/a></a>
 </head>
-<div class="body-text">
 <body>
-   <script src="script.js"></script>
+<div class="body-text">
 
+<div class="container">
+  <div class="text">
+    <br>
+<br>
+<br>
+<br>
+<br>
 
+    <p>One other little punctuation mark one can have feelings about and that is the <span class="trigger" onclick="toggleImage()">apostrophe for possession.</span> Well feel as you like about that, I can see and I do see that for many that for some the possessive case apostrophe has a gentle tender insinuation that makes it very difficult to definitely decide to do without it. One does do without it, I do, I mostly always do, but I cannot deny that from time to time I feel myself having regrets and from time to time I put it in to make the possessive case. I absolutely do not like it and leaving it out I feel no regret, there it is unnecessary and not ornamental but inside a word and its s well perhaps, perhaps it does appeal by its weakness to your weakness. At least at any rate from time to time I do find myself letting it alone if it has come in and sometimes it has come in. I cannot positively deny but that I do from time to time let it come in. </p>
+  </div>
+  <div class="image-container" id="imageContainer">
+    <img src="3apos.png" alt="Placeholder" id="expandedImage">
+  </div>
+</div>
+
+<script>
+  function toggleImage() {
+    var imageContainer = document.getElementById('imageContainer');
+    var textContainer = document.querySelector('.text');
+    imageContainer.classList.toggle('expanded');
+    textContainer.classList.toggle('expanded');
+  }
+</script>
 </body>
 </html>
+
+   
+
+   </body>
+   </html>
+   
+
 
