--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     });
     </script>
 
-<a href="https://www.youtube.com/watch?v=ffb34dCmMVQ">
+<a href="https://saharadawn.github.io/onpunctuation.github.io/pg1/">
 <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
