--- a/pg2/index.html
+++ b/pg2/index.html
@@ -25,7 +25,7 @@
 <div class="container">
 <div class="body-text">
     <p id="demo"></p>
-    
+
 </div> 
 
 <script>
@@ -66,7 +66,14 @@
 </div>
 </div>
 
-<footer><p>...</p></footer>
+
+    <a href="https://saharadawn.github.io/onpunctuation.github.io/pg3/">
+        <div class="spinner">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+        </div>
+
 
 </body>
 </html>
