--- a/pg1/index.html
+++ b/pg1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c28c14aa-ef6d-4c5b-ba70-c39fc2d5283c.jpg</title>
     <link rel="stylesheet" href="style.css" />
+   
 </head>
 <body>
 <header>
@@ -28,12 +29,11 @@
 <br>
 
     <div class="body-text">
-   
+        <script src="script.js"></script>
 
+</div>
 
-
-<script src="script.js"></script>
-<a href="https://www.youtube.com/watch?v=ffb34dCmMVQ">
+<a href="https://saharadawn.github.io/onpunctuation.github.io/pg2/">
     <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
