--- a/pg3/index.html
+++ b/pg3/index.html
@@ -41,9 +41,13 @@
     textContainer.classList.toggle('expanded');
   }
 </script>
-</body>
-</html>
-
+</div>
+<a href="https://saharadawn.github.io/onpunctuation.github.io/pg4/">
+    <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+    </div>
    
 
    </body>
