--- a/pg6/index copy.html
+++ b/pg6/index copy.html
@@ -66,7 +66,13 @@
 </div>
 </div>
 
-<footer><p>...</p></footer>
+<a href="https://saharadawn.github.io/onpunctuation.github.io/pg6/">
+    <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+    </div>
+    </a>
 
 </body>
 </html>
