--- a/pg8/index copy.html
+++ b/pg8/index copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c28c14aa-ef6d-4c5b-ba70-c39fc2d5283c.jpg</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style copy.css" />
  
 </head>
 <header>
@@ -22,7 +22,7 @@
         </div> 
 <script>
     var i = 0;
-    var txt = 'There are two different way of thinking about colons and semicolons you can think of them as commas and as such they are purely servile or you can think of them as periods and then using them can make you feel adventurous I can see that one might feel about them as periods but I myself never have, I began unfortunately to feel them as a comma and commas are servile they have no life of their own they are dependent upon use and convenience and they are put there just for practical purposes. Semi-colons and colons had for me from the first completely this character the character that a comma has and not the character that a period has and therefore and definitely I have never used them. But now dimly and definitely I do see that they might well possibly they might have in them something of the character of the period and so it might have been an adventure to use them. I really do not think so. I think however lively they are or disguised they are they are definitely more comma than period and so really I cannot regret not having used them. They are more powerful more imposing more pretentious than a comma but they are a comma all the same. They really have within them deeply within them fundamentally within them the comma nature. And now what does a comma do and what has it to do and why do I feel as I do about them.';
+    var txt = 'What does a comma do.I have refused them so often and left the out so much and did without them so continually that I have come finally to be indifferent to them. I do not now care whether you put them in or not but for a long time I felt very definitely about them and would have nothing to do with them. As I say commas are servile and they have no life of their own, and their use is not a use, it is a way of replacing one’s own interest and I do decidedly like to like my own interest my own interest in what I am doing. A comma by helping you along holding your coat for you and putting on your shoes keeps you from living your life as actively as you should lead it and to me for many years and I still do feel that way about it only now I do not pay as much attention to them, the use of them was positively degrading. Let me tell you what I feel and what I mean and what I felt and what I meant..';
     var speed = 100;
     var settleSpeed = 1000; // Speed to settle on one letter
     var settleCount = 10; // Number of cycles to settle on one letter
