--- a/pg12/index.html
+++ b/pg12/index.html
@@ -30,11 +30,11 @@
 
 <script>
     var i = 0;
-    var txt = 'So that is the way I felt about punctuation in prose, in poetry it is a little different but more so and later I will go into that. But that is the way I felt about punctuation in prose.';
-    var speed = 100;
-    var settleSpeed = 1000; // Speed to settle on one letter
-    var settleCount = 10; // Number of cycles to settle on one letter
-    var cycleLetters = ['.', ',', '!', '?'];
+    var txt = '.';
+    var speed = 300;
+    var settleSpeed = 100; // Speed to settle on one letter
+    var settleCount = 10000; // Number of cycles to settle on one letter
+    var cycleLetters = ['.', ',', '!', '?', ':', ';',];
     var cycleIndex = 0;
     
     function typeWriter() {
