--- a/pg10/index.html
+++ b/pg10/index.html
@@ -19,14 +19,11 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+
 <div class="container">
 <div class="body-text">
-    <p id="demo"></p>
+    <p id="demo">
     
 </div> 
 
