--- a/pg6/index.html
+++ b/pg6/index.html
@@ -24,7 +24,7 @@
 <br>
 <div class="container">
 <div class="body-text">
-    <p id="demo"></p>
+    <p id="demo">
     
 </div> 
 
@@ -62,7 +62,7 @@
         typeWriter();
     });
 </script>
-
+</p>
 </div>
 </div>
 
